build/00010/H4FC_Mayhem_esp32.log
Processing esp32 (board: esp32doit-devkit-v1; platform: https://github.com/pioarduino/platform-espressif32/releases/download/55.03.35/platform-espressif32.zip; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32doit-devkit-v1.html
PLATFORM: Espressif 32 (55.3.35) > DOIT ESP32 DEVKIT V1
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.5 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.366dadf354 
 - tool-esp-rom-elfs @ 2024.10.11 
 - tool-esptoolpy @ 5.1.0 
 - tool-mklittlefs @ 3.2.0 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
Converting H4FC_Mayhem.ino
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 50 compatible libraries
Scanning dependencies...
Dependency Graph
|-- H4 @ 4.0.9+sha.6f2f510
|-- H4Tools @ 0.0.16+sha.47ce091
|-- H4AsyncTCP @ 0.0.25+sha.231be9d
|-- H4AsyncMQTT @ 1.0.0-rc12+sha.9d2b784
|-- ArmadilloHTTP @ 0.1.9+sha.ac5bf86
|-- H4AsyncWebServer @ 0.0.13+sha.fcbce26
|-- H4Plugins @ 3.5.7+sha.0ad6c2a
Building in release mode
Compiling .pio/build/esp32/src/H4FC_Mayhem.ino.cpp.o
In file included from /home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:1:
.pio/libdeps/esp32/H4Plugins/src/H4Plugins.h:6:76: note: '#pragma message: Using Wifi AP - Make sure you have made arrangements!'
    6 |     #pragma message("Using Wifi AP - Make sure you have made arrangements!")
      |                                                                            ^
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino: In lambda function:
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:20:47: error: 'class H4P_Signaller' has no member named 'pulseLED'
   20 |   h4.everyRandom(FLASH_LO,FLASH_HI,[](){ h4fc.pulseLED(random(PULSE_LO,PULSE_HI),LED_RED,ACTIVE_HIGH); });
      |                                               ^~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:8:17: error: 'D6' was not declared in this scope; did you mean 'T6'?
    8 | #define LED_RED D6
      |                 ^~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:20:82: note: in expansion of macro 'LED_RED'
   20 |   h4.everyRandom(FLASH_LO,FLASH_HI,[](){ h4fc.pulseLED(random(PULSE_LO,PULSE_HI),LED_RED,ACTIVE_HIGH); });
      |                                                                                  ^~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino: In lambda function:
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:21:47: error: 'class H4P_Signaller' has no member named 'pulseLED'
   21 |   h4.everyRandom(FLASH_LO,FLASH_HI,[](){ h4fc.pulseLED(random(PULSE_LO,PULSE_HI),LED_AMBER,ACTIVE_HIGH); });
      |                                               ^~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:9:19: error: 'D7' was not declared in this scope; did you mean 'T7'?
    9 | #define LED_AMBER D7
      |                   ^~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:21:82: note: in expansion of macro 'LED_AMBER'
   21 |   h4.everyRandom(FLASH_LO,FLASH_HI,[](){ h4fc.pulseLED(random(PULSE_LO,PULSE_HI),LED_AMBER,ACTIVE_HIGH); });
      |                                                                                  ^~~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino: In lambda function:
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:22:47: error: 'class H4P_Signaller' has no member named 'pulseLED'
   22 |   h4.everyRandom(FLASH_LO,FLASH_HI,[](){ h4fc.pulseLED(random(PULSE_LO,PULSE_HI),LED_GREEN,ACTIVE_HIGH); });
      |                                               ^~~~~~~~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:10:19: error: 'D8' was not declared in this scope; did you mean 'T8'?
   10 | #define LED_GREEN D8
      |                   ^~
/home/runner/work/h4plugins/h4plugins/build/esp32/src/H4FC_Mayhem.ino:22:82: note: in expansion of macro 'LED_GREEN'
   22 |   h4.everyRandom(FLASH_LO,FLASH_HI,[](){ h4fc.pulseLED(random(PULSE_LO,PULSE_HI),LED_GREEN,ACTIVE_HIGH); });
      |                                                                                  ^~~~~~~~~
*** [.pio/build/esp32/src/H4FC_Mayhem.ino.cpp.o] Error 1
========================== [FAILED] Took 9.84 seconds ==========================
Environment    Status    Duration
-------------  --------  ------------
esp32          FAILED    00:00:09.844
==================== 1 failed, 0 succeeded in 00:00:09.844 ====================